--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-mixtools
-url = https://cran.r-project.org/src/contrib/mixtools_2.0.0.tar.gz
+url = https://ftp.osuosl.org/pub/cran/src/contrib/mixtools_2.0.0.1.tar.gz
 archives = 
 giturl = 
 domain = 
